--- a/NoteMaker/NoteMaker/Form1.resx
+++ b/NoteMaker/NoteMaker/Form1.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox8.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="_picture_joint_Rfoot.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAASYSURBVHhe7cghAcBAEASx92/6amD5FASE5N0dAD80E4De
+        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABJhJREFUeF7tyCEBwEAQBLH3b/pqYPkUBITk3R0APzQTgN5MAHozAejNBKA3E4De
         TAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0E
         oDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
@@ -140,14 +140,14 @@
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
         gN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHo
         zQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5M
-        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSg
-        du8DiMC9rlnhGTUAAAAASUVORK5CYII=
+        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKB27wOIwL2uWeEZNQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="_picture_joint_Lfoot.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAASYSURBVHhe7cghAcBAEASx92/6amD5FASE5N0dAD80E4De
+        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABJhJREFUeF7tyCEBwEAQBLH3b/pqYPkUBITk3R0APzQTgN5MAHozAejNBKA3E4De
         TAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0E
         oDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
@@ -166,14 +166,14 @@
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
         gN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHo
         zQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5M
-        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSg
-        du8DiMC9rlnhGTUAAAAASUVORK5CYII=
+        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKB27wOIwL2uWeEZNQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox6.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="_picture_joint_Rknee.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAASYSURBVHhe7cghAcBAEASx92/6amD5FASE5N0dAD80E4De
+        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABJhJREFUeF7tyCEBwEAQBLH3b/pqYPkUBITk3R0APzQTgN5MAHozAejNBKA3E4De
         TAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0E
         oDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
@@ -192,14 +192,14 @@
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
         gN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHo
         zQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5M
-        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSg
-        du8DiMC9rlnhGTUAAAAASUVORK5CYII=
+        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKB27wOIwL2uWeEZNQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="_picture_joint_Lknee.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAASYSURBVHhe7cghAcBAEASx92/6amD5FASE5N0dAD80E4De
+        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABJhJREFUeF7tyCEBwEAQBLH3b/pqYPkUBITk3R0APzQTgN5MAHozAejNBKA3E4De
         TAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0E
         oDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
@@ -218,14 +218,14 @@
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
         gN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHo
         zQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5M
-        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSg
-        du8DiMC9rlnhGTUAAAAASUVORK5CYII=
+        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKB27wOIwL2uWeEZNQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="_picture_joint_Rhand.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAASYSURBVHhe7cghAcBAEASx92/6amD5FASE5N0dAD80E4De
+        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABJhJREFUeF7tyCEBwEAQBLH3b/pqYPkUBITk3R0APzQTgN5MAHozAejNBKA3E4De
         TAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0E
         oDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
@@ -244,14 +244,14 @@
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
         gN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHo
         zQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5M
-        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSg
-        du8DiMC9rlnhGTUAAAAASUVORK5CYII=
+        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKB27wOIwL2uWeEZNQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="_picture_joint_Lhand.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAASYSURBVHhe7cghAcBAEASx92/6amD5FASE5N0dAD80E4De
+        iVBORw0KGgoAAAANSUhEUgAAAWgAAAFhCAYAAABd6jAdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABJhJREFUeF7tyCEBwEAQBLH3b/pqYPkUBITk3R0APzQTgN5MAHozAejNBKA3E4De
         TAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0E
         oDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
@@ -270,8 +270,8 @@
         MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcT
         gN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHo
         zQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5M
-        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKA3E4DeTAB6MwHozQSg
-        du8DiMC9rlnhGTUAAAAASUVORK5CYII=
+        AHozAejNBKA3E4DeTAB6MwHozQSgNxOA3kwAejMB6M0EoDcTgN5MAHozAejNBKB27wOIwL2uWeEZNQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
